@@ -52,7 +52,11 @@ work anymore until Sawfish restarted. This is fixed now. [fuchur]
 @item In @file{Makedefs.in} source @code{$(repexecdir)/rules.mk} as first, so that @code{--prefix}
 and co. from @code{configure} won't get overwritten. [Allin Cottrell]
 @end itemize
-
+@item New Features
+@itemize @minus
+@item In tabbed-windowing it is now possible to add a whole tab-group to another tab-group, or a
+single window. By default the keybinding is @code{C-Button2-Off}. [fuchur]
+@end itemize
 @item Miscellaneous Changes
 @itemize @minus
 @item In razor-qt integration module add @code{About Razor-Qt} help entry [Christopher Bratusek]
