@@ -1,7 +1,18 @@
+2012-08-28  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/tabs/tab.jl: allow a whole tabgroup to be added to
+	another tabgroup (or a single) window. [fuchur]
+
+	* lisp/sawfish/wm/keymaps.jl: bind tabgroup-add-to-group to
+	'C-Button2-Off' in titlebar/tabbar-keymap. [fuchur]
+
+	* man/news.texi: update
+
 2012-08-27  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* Makedefs.in: include $(repexecdir)/rules.mk as first,
 	so that --prefix & co. from configure don't get overwritten.
 	[Allin Cottrell]
+
+	* man/news.texi: update
 
 2012-08-23  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/util/marks.jl: removed [fuchur]
